# cerberus

./: Cargo.toml  LICENSE  README.md  cog.toml  justfile
.github/: codeowners
.github/workflows/: assign.yml  ci.yaml  cocogitto.yml  misspell.yml  release.yaml
src/: lib.rs  types.rs
src/project/types/: mod.rs  origin.rs  project_data.rs
src/registry/: client.rs  error.rs  mod.rs  types.rs
src/registry/cache/: error.rs  mod.rs  types.rs
src/registry/metrics/: mod.rs
