[package]
name = "cerberus"
version = "0.2.0"
edition = "2021"
authors = [
    "Harry Bairstow <harry@walletconnect.com>",
    "Derek Rein <derek@walletconnect.com>",
    "Ivan Reshetnikov <ivan@walletconnect.com>",
    "Xavier Basty-Kjellberg <xavier@walletconnect.com>",
]

license = "Apache-2.0"

[dependencies]
# Async runtime
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }

# Metrics
opentelemetry = { version = "0.17", features = ["trace", "metrics", "rt-tokio"] }

## Misc
once_cell = "1.15"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"

common = { git = "https://github.com/WalletConnect/rs-common.git", tag = "v0.1.0" }
